--- a/index-inkstream.html
+++ b/index-inkstream.html
@@ -24,7 +24,7 @@
     padding: 0px;
     font-family: courier, "Lucida Console", sans-serif;
     font-size: 16pt;
-  	background: url("ast/staticbg3.gif");
+  	background: url("ast/dlbg.png");
     background-size: cover;
     background-repeat: repeat;
   }
@@ -45,18 +45,21 @@
   }
 </style>
 
-<div class="noisebg"></div>
 
 <div class="tvscreen" id="tvscreenwelcome">
   <p id="welcome">(...)</p>
 </div>
 
-<div id="youtubevideosection">
-  <div class="tvscreen">
-    <iframe id="youtube_video" src="https://www.youtube.com/embed/F-xedRKs_Ok" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+<div id="tvselector" style="text-align: center;">
+
+  <div>
+    <a href="https://new.tirsod.com#inkstream"><img src="ast/questionmark.png" width="300px"></a>
   </div>
+  <b><br>a new piece has revealed itself...<br>
+  inkstream #3 is here.</b>
 </div>
 
+<br><br>
 <div class="tvselector">
 
     <div>
@@ -88,7 +91,7 @@
   <div>
     <a href = "https://new.tirsod.com">
       <div class = "floattv">
-        can you... take me to the new site instead?
+        Click here to read the new article on Dream Layer tourism.
       </div>
     </a>
   </div>
