--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     padding: 0px;
     font-family: courier, "Lucida Console", sans-serif;
     font-size: 16pt;
-  	background: url("ast/dlbg.png");
+  	background: url("ast/staticbg3.gif");
     background-size: cover;
     background-repeat: repeat;
   }
@@ -45,21 +45,18 @@
   }
 </style>
 
+<div class="noisebg"></div>
 
 <div class="tvscreen" id="tvscreenwelcome">
   <p id="welcome">(...)</p>
 </div>
 
-<div id="tvselector" style="text-align: center;">
-
-  <div>
-    <a href="https://new.tirsod.com#inkstream"><img src="ast/questionmark.png" width="300px"></a>
+<div id="youtubevideosection">
+  <div class="tvscreen">
+    <iframe id="youtube_video" src="https://www.youtube.com/embed/F-xedRKs_Ok" width="600" height="340" frameborder="0" allowfullscreen></iframe>
   </div>
-  <b><br>a new piece has revealed itself...<br>
-  inkstream #3 is here.</b>
 </div>
 
-<br><br>
 <div class="tvselector">
 
     <div>
@@ -85,16 +82,25 @@
         </div>
       </a>
     </div>
+
+    <div>
+      <a href = "https://blog.tirsod.com">
+        <div class = "floattv">
+          blog
+        </div>
+      </a>
+    </div>
+
+
 </div>
-<br><br>
-<div class="tvselector">
-  <div>
-    <a href = "https://new.tirsod.com">
-      <div class = "floattv">
-        Click here to read the new article on Dream Layer tourism.
-      </div>
-    </a>
-  </div>
+  <div class="tvselectorwide" style="margin-top: 50px;">
+    <div>
+      <a href = "https://new.tirsod.com">
+        <div class = "floattv">
+          can you... take me to the new site instead?
+        </div>
+      </a>
+    </div>
 </div>
 
 </body>
