--- a/play/twitch-auth.html
+++ b/play/twitch-auth.html
@@ -4,20 +4,28 @@
     <title>Twitch Authentication</title>
     <script>
         window.onload = function() {
-            // Check if the URL has the access token
-            if (window.location.hash.includes("access_token")) {
-                const params = new URLSearchParams(window.location.hash.substring(1));
+            // Get URL fragment (everything after `#`)
+            const hash = window.location.hash;
+
+            // Make sure there's an access token in the URL
+            if (hash.includes("access_token")) {
+                const params = new URLSearchParams(hash.substring(1));
                 const token = params.get("access_token");
-                
+
                 console.log("Twitch OAuth Token:", token);
 
                 // Send token to Unity
                 if (typeof unityInstance !== "undefined") {
-                    unityInstance.SendMessage("Twitch Auth & Stream Guest Client", "OnTwitchAuthComplete", token); //does this even work
+                    unityInstance.SendMessage("Twitch Auth & Stream Guest Client", "OnTwitchAuthComplete", token);
                 }
 
-                // Redirect user back to game
-                window.location.href = "https://tirsod.com/play"; // Change this to your WebGL build URL
+                // Clear the hash to prevent reloading issues
+                window.history.replaceState({}, document.title, window.location.pathname);
+
+                // Redirect back to the WebGL game (change this to your actual build URL)
+                setTimeout(() => {
+                    window.location.href = "https://tirsod.com/play"; 
+                }, 3000);
             }
         };
     </script>
