new BGM for carrd component

--- a/bgm/index.html
+++ b/bgm/index.html
@@ -8,6 +8,8 @@
     <title>tirsod/bgm</title>
     <meta name="description" content="Albums and soundtracks by tirsod.">
     <meta name="author" content="tirsod">
+	<link rel='icon' href='../ast/skull.ico' type='image/x-icon'/ >
+
 </head>
 
 <style type="text/css">
@@ -22,69 +24,98 @@
 		padding: 6px 8px;
 		opacity:0;
 	}
+	.twocolumn{
+		display:flex;
+		justify-content: space-between;
+		gap: 20px;
+		opacity: 1;
+		max-width: 500px;
+		align-items: flex-start;
+	}
+	.twocolumn > div{
+		flex: 1;
+		box-sizing: border-box;
+		padding: 10px;
+	}
 </style> 
-
-<link rel='icon' href='../ast/skull.ico' type='image/x-icon'/ >
 
 <left>
 
-<div class="slide1" style="animation-delay:0s; padding: 0px 8px;">
+<h1> <a class="white" href="../"> tirsod/bgm . . . </a> </h1>
 
-	<h1> <a class="white" href="../"> tirsod/bgm . . . </a> </h1>
-
-</div> <div class="slide1" style="animation-delay:0.2s;">
-	<img src="../ast/scpfp.png" width="32" height="32""> 
-	<a class="pink" href="http://soundcloud.com/tirsod">Soundcloud</a>
-	<br>
-	Recent, uncompiled releases
+<div class="twocolumn">
+	<div class="slide1" style="animation-delay:0.2s;">
+		<img src="../ast/scpfp.png" width="32" height="32""> 
+		<a class="pink" href="http://soundcloud.com/tirsod">Soundcloud</a>
+		<br>
+		Recent, uncompiled releases
+	</div>
 </div>
 
-<br><br>
-<div class="slide1" style="animation-delay:0.4s;">
-	<img src="https://f4.bcbits.com/img/a3186629639_16.jpg" width="32" height="32""> 
-	<a class="pink" href="https://tirsod.bandcamp.com/album/wave-rider-ost">Wave Rider Soundtrack: CD 1 (2024)</a>
-	<br>
-	Wave Rider's Soundtrack. There's a lot to unpack here.
-</div>
 
-<br><br>
-<div class="slide1" style="animation-delay:0.6s;">
+<div class="twocolumn">
 
-	<img src="https://f4.bcbits.com/img/a0936635054_16.jpg" width="32" height="32""> 
-	<a class="pink" href="http://tirsod.bandcamp.com/album/sentient-data">Sentient Data (2017)</a>
-	<br>
-	Antifector Soundtrack. A classic in my opinion.
+	<div class="slide1" style="animation-delay:0.4s;">
+		<img src="https://f4.bcbits.com/img/a3186629639_16.jpg" width="32" height="32""> 
+		<a class="pink" href="https://tirsod.bandcamp.com/album/wave-rider-ost">Wave Rider Soundtrack: CD 1 (2024)</a>
+		<br>
+		Wave Rider's Soundtrack. There's a lot to unpack here.
+		<br><br>
+		<iframe style="border: 0; width: 450px; height: 450px;" src="https://bandcamp.com/EmbeddedPlayer/album=1246053203/size=large/bgcol=000000/linkcol=f171a2/artwork=small/transparent=true/" seamless><a href="https://tirsod.bandcamp.com/album/wave-rider-ost">WAVE RIDER: OST by tirsod</a></iframe>
+	</div>
 
-</div>
-
-<br><br>
-
-<div class="slide1" style="animation-delay:0.8s;">
-
-	<img src="https://f4.bcbits.com/img/a3379684831_16.jpg" width="32" height="32""> 
-	<a class="pink" href="http://tirsod.bandcamp.com/album/locosoccer-soundtrack">LocoSoccer Soundtrack (2015)</a>
-	<br>
-	LocoSoccer Soundtrack. We love those long notes.
+	<div class="slide1" style="animation-delay:0.6s;">
+		<img src="https://f4.bcbits.com/img/a0936635054_16.jpg" width="32" height="32""> 
+		<a class="pink" href="http://tirsod.bandcamp.com/album/sentient-data">Sentient Data (2017)</a>
+		<br>
+		Antifector Soundtrack. A classic in my opinion.
+		<br><br>
+		<iframe style="border: 0; width: 450px; height: 450px;" src="https://bandcamp.com/EmbeddedPlayer/album=1560001398/size=large/bgcol=333333/linkcol=e32c14/artwork=small/transparent=true/" seamless><a href="https://tirsod.bandcamp.com/album/sentient-data">SENTIENT DATA by tirsod</a></iframe>
+	</div>
 
 </div>
 
-<br> <br>
+<div class="twocolumn">
 
-<div class="slide1" style="animation-delay:1s;">
+	<div class="slide1" style="animation-delay:0.8s;">
+		<img src="https://f4.bcbits.com/img/a3379684831_16.jpg" width="32" height="32""> 
+		<a class="pink" href="http://tirsod.bandcamp.com/album/locosoccer-soundtrack">LocoSoccer Soundtrack (2015)</a>
+		<br>
+		LocoSoccer Soundtrack. We love those long notes.
+		<br><br>
+		<iframe style="border: 0; width: 450px; height: 450px;" src="https://bandcamp.com/EmbeddedPlayer/album=1099941487/size=large/bgcol=333333/linkcol=2ebd35/artwork=small/transparent=true/" seamless><a href="https://tirsod.bandcamp.com/album/locosoccer-soundtrack">LocoSoccer Soundtrack by tirsod</a></iframe>
+	</div>
+	
+	<div class="slide1" style="animation-delay:1s;">
+		<img src="https://f4.bcbits.com/img/a1557611032_16.jpg" width="32" height="32""> 
+		<a class="pink" href="http://tirsod.bandcamp.com/album/8x">8X (2014)</a>
+		<br>
+		First musical personal project. The origin point.
+		<br><br>
+		<iframe style="border: 0; width: 450px; height: 450px;" src="https://bandcamp.com/EmbeddedPlayer/album=2322883630/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="https://tirsod.bandcamp.com/album/8x">8X by tirsod</a></iframe>
+	</div>
+</div>
 
-	<img src="https://f4.bcbits.com/img/a1557611032_16.jpg" width="32" height="32""> 
-	<a class="pink" href="http://tirsod.bandcamp.com/album/8x">8X (2014)</a>
-	<br>
-	First musical personal project. The origin point.
+<div class="twocolumn">
+	<div class="slide1" style="animation-delay:1.2s;">
+		<img src="https://f4.bcbits.com/img/a3307810909_16.jpg" width="32" height="32""> 
+		<a class="pink" href="https://tirsod.bandcamp.com/album/oofcore-wav-mp3-final-final">OofCore​.​wav​.​mp3_final_final (2024)</a>
+		<br>
+		??? How did this get here?
+		<br><br>
+		<iframe style="border: 0; width: 450px; height: 450px;" src="https://bandcamp.com/EmbeddedPlayer/album=3368066220/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="https://tirsod.bandcamp.com/album/oofcore-wav-mp3-final-final">OofCore.wav.mp3_final_final by Chaos Rebirth</a></iframe>
+	</div>
+
+	<div class="slide1" style="animation-delay:1.4s;">
+		<img src="https://f4.bcbits.com/img/a2641542108_16.jpg" width="32" height="32""> 
+		<a class="pink" href="https://tirsod.bandcamp.com/album/sync-bossrushjam25">Sync - BossRushJam25 (2025)</a>
+		<br>
+		Music that I made for an unreleased game.
+		<br><br>
+		<iframe style="border: 0; width: 450px; height: 450px;" src="https://bandcamp.com/EmbeddedPlayer/album=3503489739/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="https://tirsod.bandcamp.com/album/sync-bossrushjam25">Sync - BossRushJam25 by tirsod</a></iframe>
+	</div>
 
 </div>
 
-<br><br>
-<div class="slide1" style="animation-delay:1.2s;">
-	<img src="https://f4.bcbits.com/img/a3307810909_16.jpg" width="32" height="32""> 
-	<a class="pink" href="https://tirsod.bandcamp.com/album/oofcore-wav-mp3-final-final">OofCore​.​wav​.​mp3_final_final (2024)</a>
-	<br>
-	??? How did this get here?
-</div>
 
 </html>
