--- a/404.html
+++ b/404.html
@@ -14,7 +14,8 @@
 <!-- remember majin? -->
 <center>
 
-<h1> <a href="../" class="white"> Not Found. </a> </h1>
-
+    <div style="position:absolute; left: 40%; top: 50%;">
+        <h1> <a href="../" class="white"> You've become unfound. </a> </h1>
+    </div>
 
 </html>
