--- a/bgm/index.html
+++ b/bgm/index.html
@@ -68,7 +68,7 @@
 
 	<div class="slide1" style="animation-delay:0.4s;">
 		<img src="https://f4.bcbits.com/img/a3186629639_16.jpg" width="32" height="32""> 
-		<a class="pink" href="https://tirsod.bandcamp.com/album/wave-rider-ost">Wave Rider Soundtrack: CD 1 (2024)</a>
+		<a class="pink" href="https://tirsod.bandcamp.com/album/wave-rider-ost?from=embed">Wave Rider Soundtrack: CD 1 (2024)</a>
 		<br>
 		Wave Rider's Soundtrack. There's a lot to unpack here.
 		<br><br>
@@ -77,7 +77,7 @@
 
 	<div class="slide1" style="animation-delay:0.6s;">
 		<img src="https://f4.bcbits.com/img/a0936635054_16.jpg" width="32" height="32""> 
-		<a class="pink" href="http://tirsod.bandcamp.com/album/sentient-data">Sentient Data (2017)</a>
+		<a class="pink" href="http://tirsod.bandcamp.com/album/sentient-data?from=embed">Sentient Data (2017)</a>
 		<br>
 		Antifector Soundtrack. A classic in my opinion.
 		<br><br>
@@ -90,7 +90,7 @@
 
 	<div class="slide1" style="animation-delay:0.8s;">
 		<img src="https://f4.bcbits.com/img/a3379684831_16.jpg" width="32" height="32""> 
-		<a class="pink" href="http://tirsod.bandcamp.com/album/locosoccer-soundtrack">LocoSoccer Soundtrack (2015)</a>
+		<a class="pink" href="http://tirsod.bandcamp.com/album/locosoccer-soundtrack?from=embed">LocoSoccer Soundtrack (2015)</a>
 		<br>
 		LocoSoccer Soundtrack. We love those long notes.
 		<br><br>
@@ -99,7 +99,7 @@
 	
 	<div class="slide1" style="animation-delay:1s;">
 		<img src="https://f4.bcbits.com/img/a1557611032_16.jpg" width="32" height="32""> 
-		<a class="pink" href="http://tirsod.bandcamp.com/album/8x">8X (2014)</a>
+		<a class="pink" href="http://tirsod.bandcamp.com/album/8x?from=embed">8X (2014)</a>
 		<br>
 		First musical personal project. The origin point.
 		<br><br>
@@ -110,7 +110,7 @@
 <div class="twocolumn">
 	<div class="slide1" style="animation-delay:1.2s;">
 		<img src="https://f4.bcbits.com/img/a3307810909_16.jpg" width="32" height="32""> 
-		<a class="pink" href="https://tirsod.bandcamp.com/album/oofcore-wav-mp3-final-final">OofCore​.​wav​.​mp3_final_final (2024)</a>
+		<a class="pink" href="https://tirsod.bandcamp.com/album/oofcore-wav-mp3-final-final?from=embed">OofCore​.​wav​.​mp3_final_final (2024)</a>
 		<br>
 		??? How did this get here?
 		<br><br>
@@ -119,7 +119,7 @@
 
 	<div class="slide1" style="animation-delay:1.4s;">
 		<img src="https://f4.bcbits.com/img/a2641542108_16.jpg" width="32" height="32""> 
-		<a class="pink" href="https://tirsod.bandcamp.com/album/sync-bossrushjam25">Sync - BossRushJam25 (2025)</a>
+		<a class="pink" href="https://tirsod.bandcamp.com/album/sync-bossrushjam25?from=embed">Sync - BossRushJam25 (2025)</a>
 		<br>
 		Music that I made for an unreleased game.
 		<br><br>
@@ -137,7 +137,7 @@
 	</div>
 	<div class="slide1" style="animation-delay:0.2s; width: 300px;">
 		<img src="../ast/spotifylogo.png" width="32" height="32""> 
-		<a class="pink" href="http://soundcloud.com/tirsod">Spotify</a>
+		<a class="pink" href="https://open.spotify.com/artist/3d3x1Bafffc3DQBPvQnzlH">Spotify</a>
 		<br>
 		Even rarer releases.
 	</div>
