more forum posts

--- a/c/dreamlayerforums.html
+++ b/c/dreamlayerforums.html
@@ -19,6 +19,7 @@
 		background-size:cover;
 		background-repeat:no-repeat;
 		margin: 0px;
+		padding-top: 16px;
 	}
 
 	.twocolumn{
@@ -35,7 +36,7 @@
 		justify-content: left;
 		gap: 0px;
 		opacity: 1;
-		max-width: 500px;
+		max-width: 700px;
 		margin: 0 auto;
 		margin-bottom: 8px;
 		flex-direction: column;
@@ -105,6 +106,10 @@
 		height: 16px;
 	}
 
+	.blogpost{
+		margin-top: 16px;
+		margin-bottom: 16px;
+	}
 	.blogpost > .comment {
 		border-left: px solid rgb(167, 167, 167);
 		display: none;
@@ -116,6 +121,304 @@
 		padding: 10px;
 	}
 </style> 
+
+<br>
+
+<div class="blogpost">
+	<div class="onecolumn">
+		<div class="blogName">
+			<img src="ast/blg.png">
+			<b>Haven't seen tiramizu stream in a while...</b>
+		</div>
+		<div class="blogDate">
+			Posted on 2024-01-17
+		</div>
+		<div class="blogContent">
+			Wonder where he's at? I'd love to know what he's doing, it's been a minute since I've seen him work on some cool project.
+		</div>
+		<div class="blogFinish">
+			<img src="ast/thg.png"> 
+			<a href="javascript:void(0);" onclick="toggleVisibility(this)">This post received 4 Notes and 3 Highlights.</a>
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/bag.png">
+			<b>bag</b> remarked:
+		</div>
+		<div class="blogContent">
+		ur mom
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 51 Highlights.
+		</div>
+	</div>
+
+	<div class="comment" style="color:red;">User has been banned for this post.</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>thinking0fdustcl0uds</b> said:
+		</div>
+		<div class="blogContent">
+		LOL
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 3 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>brainmApped</b> said:
+		</div>
+		<div class="blogContent">
+		RIP to a hero
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 3 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>scribbledtolife</b> said:
+		</div>
+		<div class="blogContent">
+		NOOOOOOOO i wanted to know how they got a profile picture!!!!
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 3 Highlights.
+		</div>
+	</div>
+
+</div>
+
+<div class="blogpost">
+	<div class="onecolumn">
+		<div class="blogName">
+			<img src="ast/blg.png">
+			<b>Something happen to the sun?</b>
+		</div>
+		<div class="blogDate">
+			Posted on 2024-01-13
+		</div>
+		<div class="blogContent">
+			wasn't it extremely bright today? i couldn't go for a walk because of it. i think it's been getting brighter and brighter lately.
+		</div>
+		<div class="blogFinish">
+			<img src="ast/thg.png"> 
+			<a href="javascript:void(0);" onclick="toggleVisibility(this)">This post received 1 Note and 3 Highlights.</a>
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>scribbledtolife</b> noted:
+		</div>
+		<div class="blogContent">
+		YEAAHHHH i can't see ANYTHING
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 5 Highlights.
+		</div>
+	</div>
+
+</div>
+
+<div class="blogpost">
+	<div class="onecolumn">
+		<div class="blogName">
+			<img src="ast/blg.png">
+			<b>Merry Santa Day!</b>
+		</div>
+		<div class="blogDate">
+			Posted on 2024-12-24
+		</div>
+		<div class="blogContent">
+			Can't believe he actually did it. That tiramizu guy. He actually made it snow in the city.
+			Not just that. He SUCCESSFULLY manifested Santa? He's getting a lot of attention lately. Seems like he's gonna
+			turn into the next big thing and I'm all for it. Maybe he can help us manifest some better things in the dream layer.
+		</div>
+		<div class="blogFinish">
+			<img src="ast/thg.png"> 
+			<a href="javascript:void(0);" onclick="toggleVisibility(this)">This post received 4 Notes and 25 Highlights.</a>
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>madpiano</b> noted:
+		</div>
+		<div class="blogContent">
+		let's hope he doesn't manifest an asteroid hitting us then
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 13 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>dream_catcher</b> noted:
+		</div>
+		<div class="blogContent">
+		He's been doing some really cool stuff lately. I don't think he would want to destroy the city.
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 14 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>madpiano</b> noted:
+		</div>
+		<div class="blogContent">
+		you never know. 
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 14 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>:3</b> noted:
+		</div>
+		<div class="blogContent">
+		MEOWMEOWMEOW!! meowmOEW!! ❤️🎅🎁🖥️🪑🐟🍣🌊
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 33 Highlights.
+		</div>
+	</div>
+
+</div>
+
+<div class="blogpost">
+	<div class="onecolumn">
+		<div class="blogName">
+			<img src="ast/blg.png">
+			<b>Cats everywhere???</b>
+		</div>
+		<div class="blogDate">
+			Posted on 2023-11-01
+		</div>
+		<div class="blogContent">
+			Anyone notice this too? There's usually a couple of cats hanging around the cafes and stuff trying to get some food,
+			but it's getting kind of ridiculous now. I don't know what's up but I've seen like 10 cats in the same place at the same time.
+			<img src="ast/cat.JPG">
+			<br>
+			<i>picture of a cat posted outside my window</i>
+		</div>
+		<div class="blogFinish">
+			<img src="ast/thg.png"> 
+			<a href="javascript:void(0);" onclick="toggleVisibility(this)">This post received 7 Notes and 25 Highlights.</a>
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>scribbledtolife</b> noted:
+		</div>
+		<div class="blogContent">
+		+1 on this (internet lingo i think). ive seen them all over the place. they're cute but i can't feed them all, lol.
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 13 Highlights.
+		</div>
+	</div>
+	
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>madpiano</b> added:
+		</div>
+		<div class="blogContent">
+		very, very weird. internet culture is full of cats. maybe that has something to do with it?
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 15 Highlights.
+		</div>
+	</div>
+	
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>dream_catcher</b> said:
+		</div>
+		<div class="blogContent">
+		You're right! There's been more and more cats lately! I think it's because of the new cat cafe that opened up.
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 1 Highlights.
+		</div>
+	</div>
+	
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>thinking0fdustcl0uds</b> wonders:
+		</div>
+		<div class="blogContent">
+		"cat cafe"??? theres no cat cafes tho???? loll maybe u should adopt one or two lol
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 16 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>:3</b> wonders:
+		</div>
+		<div class="blogContent">
+		meowmeowmeo meowmeow meowmeowmoew?!? meowm ow! meowmeow!!! meowmeowmeow!! 🐈🐈🐱❤️
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 35 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>scribbledtolife</b> noted:
+		</div>
+		<div class="blogContent">
+		ok THAT'S FUNNY.
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 30 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>dream_catcher</b> noted:
+		</div>
+		<div class="blogContent">
+		Okay, I think that's enough internet for today. Hahaha!
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 7 Highlights.
+		</div>
+	</div>
+
+</div>
 
 <div class="blogpost">
 	<div class="onecolumn">
@@ -132,6 +435,7 @@
 			I think it's really cool! The dream layer is getting some recognition!
 			<br>
 			If you're interested, here's a screenshot of the exact magazine page where he's featured:
+			<br>
 			<img src="ast/tiramizuref1.png" onclick="openFullscreen(this)">
 		</div>
 		<div class="blogFinish">
@@ -191,6 +495,77 @@
 			<img src="ast/add.png"> This post received 7 Highlights.
 		</div>
 	</div>
+</div>
+
+<div class="blogpost">
+	<div class="onecolumn">
+		<div class="blogName">
+			<img src="ast/blg.png">
+			<b>thedreamlayer.com is live!</b>
+		</div>
+		<div class="blogDate">
+			Posted on 2023-06-28
+		</div>
+		<div class="blogContent">
+			Hey everyone! I'm excited to announce that thedreamlayer.com is now live!
+			This website is a place where you can find all the latest news and updates for our world.
+			I got this idea while browsing some websites from the real world (This internet thing is quite the
+			magical discovery! Thank you so much the research team for making this possible!)
+			<br><br>
+			I don't know a lot about programming so I had to get some help from outside. It's a bit
+			tedious transcribing all that stuff from our message boards but I'm happy with the result. I tried to go for a "forums" look. It's this thing they do
+			where they post news and make comments and stuff. It should be a good option to keep us communicated and up to date.
+			<br><br>
+			Let me know if you run into any issues or if you have any suggestions for the website! I'll try to add more to it as we go =^)
+			<b>-The Admin</b> (psst, it's actually me, Nick!)
+		</div>
+		<div class="blogFinish">
+			<img src="ast/thg.png"> 
+			<a href="javascript:void(0);" onclick="toggleVisibility(this)">This post received 2 Notes and 18 Highlights.</a>
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>dream_catcher</b> noted:
+		</div>
+		<div class="blogContent">
+		Awesome stuff man. We needed something like this.
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 5 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>brainmApped</b> said:
+		</div>
+		<div class="blogContent">
+		Please put up a map or something! I keep getting lost in the city!! When are they reopening the train of thought??
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 7 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>madpiano</b> said:
+		</div>
+		<div class="blogContent">
+		yeah finding the digital layer might have been the best thing ever i don't know if we should rely on it so much.
+		there's already been a few accidents with people getting lost in the wrong places and i think it's because of this.
+		i think it's making everyone think there's links in between the buildings when there's not. good luck with the site though.
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 2 Highlights.
+		</div>
+	</div>
+
 </div>
 
 <script>
