--- a/c/dreamlayerforums.html
+++ b/c/dreamlayerforums.html
@@ -544,7 +544,7 @@
 			<b>brainmApped</b> said:
 		</div>
 		<div class="blogContent">
-		Please put up a map or something! I keep getting lost in the city!! When are they reopening the train of thought??
+		Please put up a map or something! I keep getting lost in the city!! When are they reopening the train of thought?? <a href="https://tirsod.com/6410">🚆</a>
 		</div>
 		<div class="blogFinish">
 			<img src="ast/add.png"> This post received 7 Highlights.
