--- a/c/dreamlayerforums.html
+++ b/c/dreamlayerforums.html
@@ -100,6 +100,11 @@
 		width: 80%;
 		border: 1px solid #ccc;
 	}
+	.blogContent > a{
+		text-decoration: none;
+		color: black;
+		text-shadow: #bbb 1px 1px 1px;
+	}
 
 	.blogFinish > img{
 		width: 16px;
@@ -544,7 +549,7 @@
 			<b>brainmApped</b> said:
 		</div>
 		<div class="blogContent">
-		Please put up a map or something! I keep getting lost in the city!! When are they reopening the train of thought?? <a href="https://tirsod.com/6410">🚆</a>
+		Please put up a map or something! I keep getting lost in the city!! When are they reopening the <a href="https://tirsod.com/6410">train</a> of thought??
 		</div>
 		<div class="blogFinish">
 			<img src="ast/add.png"> This post received 7 Highlights.
