fixed that link lol maybe

--- a/c/dreamlayerforums.html
+++ b/c/dreamlayerforums.html
@@ -549,7 +549,7 @@
 			<b>brainmApped</b> said:
 		</div>
 		<div class="blogContent">
-		Please put up a map or something! I keep getting lost in the city!! When are they reopening the <a href="https://tirsod.com/6410">train</a> of thought??
+		Please put up a map or something! I keep getting lost in the city!! When are they reopening the <a target="_parent" rel="noopener noreferrer" href="https://tirsod.com/6410/shelter">train</a> of thought??
 		</div>
 		<div class="blogFinish">
 			<img src="ast/add.png"> This post received 7 Highlights.
