--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
-	<LINK rel="stylesheet" type="text/css" media="screen" href="ast/style.css">
+	  <meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
+	  <LINK rel="stylesheet" type="text/css" media="screen" href="ast/style.css">
+      <style>
+        html {
+            background-color: #000;
+        }
+    </style>
     <title>. . .</title>
     <meta name="description" content="Homepage | Art, Sound, Code.">
     <meta name="author" content="tirsod & lilybeevee">
