6410 TV IS NOT A REAL TV CHANNEL

--- a/c/dreamlayerforums.html
+++ b/c/dreamlayerforums.html
@@ -234,6 +234,19 @@
 		</div>
 	</div>
 
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>tvwatcher64</b> noted:
+		</div>
+		<div class="blogContent">
+		something will happen when the clock hits 3:00.
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 10 Highlights.
+		</div>
+	</div>
+
 </div>
 
 <div class="blogpost">
@@ -338,7 +351,7 @@
 			<b>scribbledtolife</b> noted:
 		</div>
 		<div class="blogContent">
-		+1 on this (internet lingo i think). ive seen them all over the place. they're cute but i can't feed them all, lol.
+		+1 on this (internet lingo i think). ive seen them all over the place. they're cute but i can't feed them all, lol. do you think they're trained?
 		</div>
 		<div class="blogFinish">
 			<img src="ast/add.png"> This post received 13 Highlights.
@@ -494,7 +507,7 @@
 			<b>99blueballoons</b> wonders:
 		</div>
 		<div class="blogContent">
-		I never get to catch him live. is he on some other website or something?
+		I never get to catch him live. is he on some other website or something? I wasn't trained for the internet LOL.
 		</div>
 		<div class="blogFinish">
 			<img src="ast/add.png"> This post received 7 Highlights.
@@ -549,7 +562,7 @@
 			<b>brainmApped</b> said:
 		</div>
 		<div class="blogContent">
-		Please put up a map or something! I keep getting lost in the city!! When are they reopening the <a target="_parent" rel="noopener noreferrer" href="https://tirsod.com/6410/shelter">train</a> of thought??
+		Please put up a map or something! I keep getting lost in the city!! When are they reopening the <a target="_parent" rel="noopener noreferrer" href="https://tirsod.com/6410">train</a> of thought??
 		</div>
 		<div class="blogFinish">
 			<img src="ast/add.png"> This post received 7 Highlights.
