--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
     </div>
 
     <div>
-      <a href = "https://blog.tirsod.com">
+      <a href = "https://tirdelusion.crd.co/#links">
         <div class = "floattv">
-          blog
+          links
         </div>
       </a>
     </div>
@@ -141,7 +141,7 @@
     <div>
       <a href = "https://new.tirsod.com">
         <div class = "floattv">
-          can you... take me to the new site instead?
+          [PORTAL TEMPORARILY CLOSED DUE TO EMERGENCY PROTOCOL - DO NOT ENTER]
         </div>
       </a>
     </div>
