--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             background-color: #000;
         }
     </style>
-    <title>. . .</title>
-    <meta name="description" content="Homepage | Art, Sound, Code.">
+    <title>EMERGENCY_PROTOCOL_ACTIVE</title>
+    <meta name="description" content="LOOK FOR THE SAFETY CODE. STICK TO THE NOISE. REMAIN STATIC.">
     <meta name="author" content="tirsod & lilybeevee">
     <link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
     <script type='text/javascript' src='ast/tv.js'></script>
