--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
     <div>
-      <a href = "https://tirdelusion.crd.co">
+      <a href = "https://tirdelusion.crd.co/#art">
         <div class = "floattv">
           art
         </div>
