--- a/c/dlforums.html
+++ b/c/dlforums.html
@@ -562,7 +562,7 @@
 			<b>brainmApped</b> said:
 		</div>
 		<div class="blogContent">
-		Please put up a map or something! I keep getting lost in the city!! When are they reopening the <a target="_parent" rel="noopener noreferrer" href="https://tirsod.com/6410">train</a> of thought??
+		Please put up a map or something! I keep getting lost in the city!! When are they reopening the <a target="_parent" rel="noopener noreferrer" href="https://tirsod.com/6410">train of thought??</a>
 		</div>
 		<div class="blogFinish">
 			<img src="ast/add.png"> This post received 7 Highlights.
