--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <div class="tvselector">
 
     <div>
-      <a href = "games/">
+      <a href = "https://tirdelusion.crd.co/#games">
         <div class = "floattv">
           games
         </div>
@@ -112,7 +112,7 @@
     </div>
 
     <div>
-      <a href = "bgm/">
+      <a href = "https://tirdelusion.crd.co/#music">
         <div class = "floattv">
           music
         </div>
