there is nothing here

--- a/level4/index.html
+++ b/level4/index.html
@@ -24,22 +24,18 @@
             font-size: 24px;
             text-align: center;
         }
+        a, a:hover{
+            color: #fff;
+        }
     </style>
 </head>
 
 <body>
 
     <div class="centercolumn" style="width: 50%; margin: 16px auto; z-index: 1;">
-        
-        <img src="exit.gif" width="400px">
-
         <hr><hr><hr>
-        <iframe style="border: 0; width: 50%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=4175949810/size=small/bgcol=333333/linkcol=ffffff/track=1012297656/transparent=true/" seamless><a href="https://tirsod.bandcamp.com/album/broadcast-integrity-check">⚠ BROADCAST INTEGRITY_CHECK by 6410</a></iframe>
-
-        <a href="https://tirsod.com"><p>EXIT TO LEVEL 1</p></a>
-        <a href="https://new.tirsod.com"><p>EXIT TO LEVEL 2</p></a>
-        <a href="https://tirdelusion.crd.co"><p>EXIT TO LEVEL 3</p></a>
-        <a href="../../level4"><p>EXIT TO LEVEL 4</p></a>
+        <p>there is nothing here.</p>
+        <p><a href="../">yet.</a></p>
     </div>
 
 </body>
