--- a/c/dlforums.html
+++ b/c/dlforums.html
@@ -207,6 +207,66 @@
 	<div class="onecolumn">
 		<div class="blogName">
 			<img src="ast/blg.png">
+			<b>dbftbs dzqifst bsf dppm!</b>
+		</div>
+		<div class="blogDate">
+			Posted on 2024-64-10
+		</div>
+		<div class="blogContent">
+			I found this really cool website on the real web where you can encode and decode messages using a simple cipher. It's really fun!
+			<a href="https://cryptii.com/pipes/caesar-cipher">https://cryptii.com/pipes/caesar-cipher</a> you should check it out! you can send secret messages to your friends by just shifting a couple of letters around!
+		</div>
+		<div class="blogFinish">
+			<img src="ast/thg.png"> 
+			<a href="javascript:void(0);" onclick="toggleVisibility(this)">This post received 3 Notes and 12 Highlights.</a>
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>thinking0fdustcl0uds</b> asked:
+		</div>
+		<div class="blogContent">
+		i thought that was a salad?
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 6 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>dream_catcher</b> said:
+		</div>
+		<div class="blogContent">
+		i thought it was a keymash title LOL
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 4 Highlights.
+		</div>
+	</div>
+
+	<div class="comment">
+		<div class="blogName">
+			<img src="ast/pfp.png">
+			<b>madpiano</b> remarked:
+		</div>
+		<div class="blogContent">
+		really cool! but you probably shouldn't spend so much time on the real web...
+		</div>
+		<div class="blogFinish">
+			<img src="ast/add.png"> This post received 10 Highlights.
+		</div>
+	</div>
+
+</div>
+
+<div class="blogpost">
+	<div class="onecolumn">
+		<div class="blogName">
+			<img src="ast/blg.png">
 			<b>Something happen to the sun?</b>
 		</div>
 		<div class="blogDate">
