i keep forgetting about the links man, damn

--- a/c/dlforums.html
+++ b/c/dlforums.html
@@ -449,7 +449,7 @@
 		</div>
 		<div class="blogContent">
 			I found this really cool website on the real web where you can encode and decode messages using a simple cipher. It's really fun!
-			<a href="https://cryptii.com/pipes/caesar-cipher">https://cryptii.com/pipes/caesar-cipher</a> you should check it out! you can send secret messages to your friends by just shifting a couple of letters around!
+			<a href="https://cryptii.com/pipes/caesar-cipher" target="_parent" rel="noopener noreferrer">https://cryptii.com/pipes/caesar-cipher</a> you should check it out! you can send secret messages to your friends by just shifting a couple of letters around!
 		</div>
 		<div class="blogFinish">
 			<img src="ast/thg.png"> 
