--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <div class="darken"></div>
 
 <div class="tvscreen" id="tvscreenwelcome">
-  <p id="welcome" style="z-index: 1;">(...)</p>
+  <a href="https://tirdelusion.crd.co" style="z-index: 2; position:relative;"><p id="welcome" style="z-index: 2;">(...)</p></a>
 </div>
 
 <div id="youtubevideosection">
@@ -101,50 +101,58 @@
   </div>
 </div>
 
-<div class="tvselector">
+<div style="position:relative; display: flex; column-count: 1; flex-direction: column; row-gap: 60px; flex-wrap: nowrap;">
+  <div class="tvselector">
+      <div>
+        <a href = "https://tirdelusion.crd.co/#games">
+          <div class = "floattv">
+            games
+          </div>
+        </a>
+      </div>
 
-    <div>
-      <a href = "https://tirdelusion.crd.co/#games">
-        <div class = "floattv">
-          games
-        </div>
-      </a>
+      <div>
+        <a href = "https://tirdelusion.crd.co/#music">
+          <div class = "floattv">
+            music
+          </div>
+        </a>
+      </div>
+
+      <div>
+        <a href = "https://tirdelusion.crd.co/#art">
+          <div class = "floattv">
+            art
+          </div>
+        </a>
+      </div>
+
+      <div>
+        <a href = "https://tirdelusion.crd.co/#links">
+          <div class = "floattv">
+            links
+          </div>
+        </a>
+      </div>
+
     </div>
+  </div>
 
-    <div>
-      <a href = "https://tirdelusion.crd.co/#music">
-        <div class = "floattv">
-          music
-        </div>
-      </a>
-    </div>
-
-    <div>
-      <a href = "https://tirdelusion.crd.co/#art">
-        <div class = "floattv">
-          art
-        </div>
-      </a>
-    </div>
-
-    <div>
-      <a href = "https://tirdelusion.crd.co/#links">
-        <div class = "floattv">
-          links
-        </div>
-      </a>
-    </div>
-
-
-</div>
-  <div class="tvselectorwide" style="margin-top: 50px;">
+  <div style="margin-top: 10%; width: 50%; margin: 0 auto; margin-top: 50px; display: flex; flex-direction: column; z-index: 1; position: relative; 	animation-name: fadein; animation-duration: 1.5s;">
     <div>
       <a href = "https://new.tirsod.com">
-        <div class = "floattv">
-          [PORTAL TEMPORARILY CLOSED DUE TO EMERGENCY PROTOCOL - DO NOT ENTER]
+        <div class = "floattv" style="height: 80px; margin-top: 50px;">
+          [EMERGENCY PROTOCOL ACTIVE]<br>[DO NOT ENTER THIS PORTAL]
         </div>
       </a>
     </div>
+
+  </div>
+
+    <div class="tvselectorwide" style="margin-top: 50px;">
+      
+  </div>
+
 </div>
 
 </body>
